--- a/styles/section.css
+++ b/styles/section.css
@@ -1,31 +1,34 @@
-#featured{
-    img{
+#featured {
+    img {
         height: 100%;
         object-fit: cover;
     }
-    
-    .card{
+
+    .card {
         border-radius: 4px;
         overflow: hidden;
         position: relative;
-        &::before{
+
+        &::before {
             content: "";
             position: absolute;
             inset: 0;
             top: 50%;
-            background:linear-gradient(
-                180deg, transparent 0%,
-                #020617
-            );
+            background: linear-gradient(180deg, transparent 0%,
+                    #020617);
         }
 
-        figcaption{
+        figcaption {
             position: absolute;
             bottom: 0;
 
             padding: 24px;
 
-            h2{
+         &:has(.text-lg){
+            padding: 12px;
+         }
+
+            h2 {
                 margin-top: 8px;
             }
         }
