--- a/styles/globol.css
+++ b/styles/globol.css
@@ -62,8 +62,16 @@ img {
 }
 
 main {
-    margin-top: 40px;
-    gap: 80px;
+    margin-block: 40px;
+    row-gap: 80px;
+    column-gap: 32px;
+
+    grid-template-columns: 2fr 1.4fr;
+
+    grid-template-areas:
+        "featured featured"
+        "weekly weekly"
+        "ai aside";
 }
 
 .content-tag {
@@ -75,7 +83,7 @@ main {
     text-transform: uppercase;
     letter-spacing: 0.04em;
     color: var(--text-color-primary);
-    box-shadow:0px 4px 16px #02061740 ;
+    box-shadow: 0px 4px 16px #02061740;
 
 
 
