--- a/styles/section.css
+++ b/styles/section.css
@@ -22,6 +22,8 @@ section header {
 }
 
 #featured {
+    grid-area: featured;
+
     img {
         height: 100%;
         object-fit: cover;
@@ -60,8 +62,7 @@ section header {
 }
 
 #weekle {
-
-
+    grid-area: weekly;
 
     &>div {
         grid-template-columns: repeat(4, 292px)
@@ -85,5 +86,41 @@ section header {
             margin: top 8px;
             font-weight: 800;
         }
+    }
+}
+
+#ia {
+
+    grid-area: ai;
+
+    img {
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3 {
+        margin-block: 8px 4px;
+    }
+
+}
+
+aside {
+    grid-area: aside;
+
+}
+
+#more {
+
+    margin-top: 32px;
+
+    h3 {
+        margin-top: 8px;
+    }
+
+    img {
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
 }
